--- a/sass/components/_lang-select-page.scss
+++ b/sass/components/_lang-select-page.scss
@@ -23,25 +23,23 @@ Styleguide: langselect.dropdown
 */
 
 .lang-select-page {
-  @extend .hidden-print;
-
   background: $grey-lightest;
   border-bottom: 1px solid $grey;
   font-size: $font-size-xsmall;
   overflow: hidden;
-  width:100%;
+  width: 100%;
+  @extend .hidden-print;
 }
 
 .icon.lang-select-page__icon {
-  @extend .hidden-print;
-
-  float:left;
+  float: left;
   margin: 0;
   font-size: 2em;
   padding: 0;
+  @extend .hidden-print;
 
   &:before {
-    padding-top:30%;
+    padding-top: 30%;
     float: left;
   }
 }
@@ -51,14 +49,14 @@ Styleguide: langselect.dropdown
 }
 
 ul.lang-select-page__list {
-  float:left;
-  padding: 0;
-  margin: 0;
+  float: left;
+  padding-left: 0 !important;
+  margin-bottom: 0 !important;
 
   .lang-select-page__option {
-    list-style: none;
     float: left;
     padding: 0.85em;
+    list-style: none;
 
     a {
       display: block;
@@ -73,7 +71,6 @@ ul.lang-select-page__list {
 }
 
 select.lang-select-page__list {
-  @extend .hidden-print;
   background: transparent url("../images/png/arrow-thick-down.png") no-repeat 8em center;
   border: 0;
   border-radius: 0;
@@ -83,6 +80,8 @@ select.lang-select-page__list {
   line-height: 3.4em;
   height: 3.4em;
   width: 10em;
+  @extend .hidden-print;
+
   &:hover {
     // select component is using a font icon with too much specificity that has to be overridden.
     background-size: unset !important;
@@ -99,11 +98,11 @@ select.lang-select-page__list {
     -moz-appearance: none;
     text-indent: 0.01px;
     text-overflow: '';
-
     background-color: $blue-darker;
     color: #fff;
 
-    &:hover, &:active {
+    &:hover,
+    &:active {
       border: 0;
     }
 
@@ -124,9 +123,11 @@ select.lang-select-page__list {
   }
 
   .lang-select-page__option {
-    &.is-selected, &.is-selected a {
+    &.is-selected,
+    &.is-selected a {
       color: #000;
     }
+
     a {
       color: #fff;
     }
@@ -137,6 +138,7 @@ select.lang-select-page__list {
   .lang-select-page__option {
     display: inline-block;
   }
+
   .lang-select-page__unavailable {
     margin-right: 3em;
   }
